--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,12 @@
+<!-- CR1-"removed the vector image" -->
+
 <div class="login-container">
-    <div class="left">
+  <!-- CR1 05-15-2024-->
+    <!-- <div class="left">
       <img src="assets/image/images.png" alt="Login Image">
-    </div>
+    </div> -->
+
+
     <div class="right">
       <h1>Log In</h1>
       <form>
